--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         
         <div class="video-container">
             <iframe 
-                src="https://drive.google.com/file/d/1-2UN10qUbP6S2D4JeBY2ahcRwFhE4E1j/preview" 
+                src="Segredo_da_Erecao_de_Ferro.pdf" 
                 class="video-frame"
                 allow="autoplay">
             </iframe>
