--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="donation-section">
             <p class="donation-text">Não doou ainda? Basta tocar para copiar a chave pix:</p>
             <div class="pix-key" onclick="copyPixKey()">
-                61.094.034/0001-87
+                Esse projeto foi barrado.
             </div>
             <p class="donation-text">e fazer uma doação qualquer <span class="emoji">😊</span></p>
         </div>
