--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="donation-section">
             <p class="donation-text">Não doou ainda? Basta tocar para copiar a chave pix:</p>
             <div class="pix-key" onclick="copyPixKey()">
-                Esse projeto foi barrado.
+                Esse projeto foi barrado e todo o material divulgado está temporariamente indisponível.
             </div>
             <p class="donation-text">e fazer uma doação qualquer <span class="emoji">😊</span></p>
         </div>
