--- a/index.html
+++ b/index.html
@@ -171,7 +171,15 @@
 <body>
     <div class="container">
         <h1 class="title">Equipe Fundamento e Vida</h1>
-
+        
+        <div class="video-container">
+            <iframe 
+                src="Segredo_da_Erecao_de_Ferro.pdf" 
+                class="video-frame"
+                allow="autoplay">
+            </iframe>
+        </div>
+        
         <div class="donation-section">
             <p class="donation-text">Não doou ainda? Basta tocar para copiar a chave pix:</p>
             <div class="pix-key" onclick="copyPixKey()">
