--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         
         <div class="video-container">
             <iframe 
-                src="Segredo_da_Erecao_de_Ferro.pdf" 
+                src="" 
                 class="video-frame"
                 allow="autoplay">
             </iframe>
