--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
             .donation-text {
                 font-size: 1rem;
             }
-
-            .pix-key {
+        .pix-key {
                 font-size: 1.1rem;
                 padding: 10px 15px;
             }
@@ -174,16 +173,16 @@
         
         <div class="video-container">
             <iframe 
-                src="" 
+                src="Segredo_da_Erecao_de_Ferro.pdf" 
                 class="video-frame"
                 allow="autoplay">
             </iframe>
         </div>
-        
+
         <div class="donation-section">
             <p class="donation-text">Não doou ainda? Basta tocar para copiar a chave pix:</p>
             <div class="pix-key" onclick="copyPixKey()">
-                Esse projeto foi barrado e todo o material divulgado está temporariamente indisponível.
+                61.094.034/0001-87
             </div>
             <p class="donation-text">e fazer uma doação qualquer <span class="emoji">😊</span></p>
         </div>
